--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gatsby-ecommerce-theme",
   "version": "1.0.0",
   "private": true,
-  "description": "An e-commerce theme designed by Matter Design for Netlify.",
+  "description": "An e-commerce style brand designed by Matter Design for Netlify.",
   "author": "Matter Design",
   "keywords": [
     "gatsby"
