--- a/src/config.json
+++ b/src/config.json
@@ -56,7 +56,7 @@
           "link": "/support#returns"
         },
         {
-          "text": "How to use this theme",
+          "text": "How to use this style brand",
           "link": "/how-to-use"
         }
       ]
